--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,9 +8,10 @@ dataSources:
     source:
       address: "0x86935F11C86623deC8a25696E1C19a8659CbF95d"
       abi: Contract
+      startBlock: 11500000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - ClaimAavegotchi
@@ -82,134 +83,8 @@ dataSources:
         - name: Contract
           file: ./abis/Contract.json
       eventHandlers:
-        - event: ClaimAavegotchi(indexed uint256)
-          handler: handleClaimAavegotchi
-        - event: LockAavegotchi(indexed uint256,uint256)
-          handler: handleLockAavegotchi
-        - event: SetAavegotchiName(indexed uint256,string,string)
-          handler: handleSetAavegotchiName
-        - event: SetBatchId(indexed uint256,uint256[])
-          handler: handleSetBatchId
-        - event: SpendSkillpoints(indexed uint256,int16[4])
-          handler: handleSpendSkillpoints
-        - event: UnLockAavegotchi(indexed uint256,uint256)
-          handler: handleUnLockAavegotchi
-        - event: AddedAavegotchiBatch(indexed address,uint256[])
-          handler: handleAddedAavegotchiBatch
-        - event: AddedItemsBatch(indexed address,uint256[],uint256[])
-          handler: handleAddedItemsBatch
-        - event: WithdrawnBatch(indexed address,uint256[])
-          handler: handleWithdrawnBatch
-        - event: WithdrawnItems(indexed address,uint256[],uint256[])
-          handler: handleWithdrawnItems
-        - event: DecreaseStake(indexed uint256,uint256)
-          handler: handleDecreaseStake
-        - event: ExperienceTransfer(indexed uint256,indexed uint256,uint256)
-          handler: handleExperienceTransfer
-        - event: IncreaseStake(indexed uint256,uint256)
-          handler: handleIncreaseStake
-        - event: AddCollateralType((address,(int16[6],bytes3,bytes3,bytes3,uint8,uint8,uint16,bool)))
-          handler: handleAddCollateralType
-        - event: AddItemType((string,string,string,int8[6],bool[16],uint8[],(uint8,uint8,uint8,uint8),uint256,uint256,uint256,uint32,uint8,bool,uint16,bool,uint8,int16,uint32))
-          handler: handleAddItemType
-        - event: AddWearableSet((string,uint8[],uint16[],int8[5]))
-          handler: handleAddWearableSet
-        - event: CreateHaunt(indexed uint256,uint256,uint256,bytes32)
-          handler: handleCreateHaunt
-        - event: DaoTransferred(indexed address,indexed address)
-          handler: handleDaoTransferred
-        - event: DaoTreasuryTransferred(indexed address,indexed address)
-          handler: handleDaoTreasuryTransferred
-        - event: GameManagerTransferred(indexed address,indexed address)
-          handler: handleGameManagerTransferred
-        - event: GrantExperience(uint256[],uint256[])
-          handler: handleGrantExperience
-        - event: ItemTypeMaxQuantity(uint256[],uint256[])
-          handler: handleItemTypeMaxQuantity
-        - event: UpdateCollateralModifiers(int16[6],int16[6])
-          handler: handleUpdateCollateralModifiers
-        - event: UpdateWearableSet(uint256,(string,uint8[],uint16[],int8[5]))
-          handler: handleUpdateWearableSet
-        - event: ChangedListingFee(uint256)
-          handler: handleChangedListingFee
-        - event: ERC1155ExecutedListing(indexed uint256,indexed address,address,address,uint256,indexed uint256,uint256,uint256,uint256)
-          handler: handleERC1155ExecutedListing
-        - event: ERC1155ListingAdd(indexed uint256,indexed address,address,uint256,indexed uint256,uint256,uint256,uint256)
-          handler: handleERC1155ListingAdd
-        - event: ERC1155ListingCancelled(indexed uint256)
-          handler: handleERC1155ListingCancelled
-        - event: ERC721ExecutedListing(indexed uint256,indexed address,address,address,uint256,indexed uint256,uint256,uint256)
-          handler: handleERC721ExecutedListing
-        - event: ERC721ListingAdd(indexed uint256,indexed address,address,uint256,indexed uint256,uint256)
-          handler: handleERC721ListingAdd
         - event: EquipWearables(indexed uint256,uint16[16],uint16[16])
           handler: handleEquipWearables
-        - event: TransferToParent(indexed address,indexed uint256,indexed uint256,uint256)
-          handler: handleTransferToParent
-        - event: UseConsumables(indexed uint256,uint256[],uint256[])
-          handler: handleUseConsumables
-        - event: MetaTransactionExecuted(address,address,bytes)
-          handler: handleMetaTransactionExecuted
-        - event: BuyPortals(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleBuyPortals
-        - event: Xingyun(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleXingyun
-        - event: PurchaseItemsWithGhst(indexed address,indexed address,uint256[],uint256[],uint256)
-          handler: handlePurchaseItemsWithGhst
-        - event: PurchaseItemsWithVouchers(indexed address,indexed address,uint256[],uint256[])
-          handler: handlePurchaseItemsWithVouchers
-        - event: PurchaseTransferItemsWithGhst(indexed address,indexed address,uint256[],uint256[],uint256)
-          handler: handlePurchaseTransferItemsWithGhst
-        - event: OpenPortals(uint256[])
-          handler: handleOpenPortals
-        - event: PortalOpened(indexed uint256)
-          handler: handlePortalOpened
-        - event: VrfRandomNumber(indexed uint256,uint256,uint256)
-          handler: handleVrfRandomNumber
-        - event: MigrateVouchers(indexed address,uint256[],uint256[])
-          handler: handleMigrateVouchers
-        - event: AavegotchiInteract(indexed uint256,uint256)
-          handler: handleAavegotchiInteract
-        - event: ERC1155ListingCancelled(indexed uint256,uint256,uint256)
-          handler: handleERC1155ListingCancelled1
-        - event: ERC1155ListingRemoved(indexed uint256,uint256,uint256)
-          handler: handleERC1155ListingRemoved
-        - event: UpdateERC1155Listing(indexed uint256,uint256,uint256,uint256)
-          handler: handleUpdateERC1155Listing
-        - event: ERC721ListingCancelled(indexed uint256,uint256,uint256)
-          handler: handleERC721ListingCancelled
-        - event: ERC721ListingRemoved(indexed uint256,uint256,uint256)
-          handler: handleERC721ListingRemoved
-        - event: StoreSvg((bytes32,uint256[])[])
-          handler: handleStoreSvg
-        - event: UpdateSvg((bytes32,uint256[],uint256[])[])
-          handler: handleUpdateSvg
-        - event: DiamondCut((address,uint8,bytes4[])[],address,bytes)
-          handler: handleDiamondCut
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: ApprovalForAll(indexed address,indexed address,bool)
-          handler: handleApprovalForAll
-        - event: TransferBatch(indexed address,indexed address,indexed address,uint256[],uint256[])
-          handler: handleTransferBatch
-        - event: TransferFromParent(indexed address,indexed uint256,indexed uint256,uint256)
-          handler: handleTransferFromParent
-        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleTransferSingle
-        - event: TransferToParent(indexed address,indexed uint256,indexed uint256,uint256)
-          handler: handleTransferToParent1
-        - event: URI(string,indexed uint256)
-          handler: handleURI
-        - event: Approval(indexed address,indexed address,indexed uint256)
-          handler: handleApproval
-        - event: ApprovalForAll(indexed address,indexed address,bool)
-          handler: handleApprovalForAll1
-        - event: Transfer(indexed address,indexed address,indexed uint256)
-          handler: handleTransfer
-        - event: ItemModifiersSet(uint256,int8[6],uint8)
-          handler: handleItemModifiersSet
-        - event: WearableSlotPositionsSet(uint256,bool[16])
-          handler: handleWearableSlotPositionsSet
-        - event: MintPortals(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleMintPortals
+        - event: ClaimAavegotchi(indexed uint256)
+          handler: handleClaimAavegotchi
       file: ./src/mapping.ts
