--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -24,6 +24,6 @@ jobs:
       - uses: gtaschuk/graph-deploy@v0.1.0
         with:
           graph_access_token: ${{secrets.GRAPH_ACCESS_TOKEN}}
-          graph_subgraph_name: "aavegotchi-svg-subgraph"
+          graph_subgraph_name: "aavegotchi-svg"
           graph_account: "froid1911"
           graph_config_file: "subgraph.yml"
