--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -26,4 +26,4 @@ jobs:
           graph_access_token: ${{secrets.GRAPH_ACCESS_TOKEN}}
           graph_subgraph_name: "aavegotchi-svg"
           graph_account: "froid1911"
-          graph_config_file: "subgraph.yml"
+          graph_config_file: "subgraph.yaml"
