test: test pr trigger

--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: feat/ghActionDeployment
   pull_request:
-    branches: main
+    branches: feat/ghActionDeployment
 
 jobs:
   deploy:
