fix: subgraph.yaml filename

--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -27,7 +27,7 @@ jobs:
           echo "$(yarn global bin)" >> $GITHUB_PATH
         shell: bash
       - name: Deploy to TheGraph
-        run: export deploymentId=`graph deploy --access-token ${{secrets.GRAPH_ACCESS_TOKEN}} aavegotchi/aavegotchi-svg subgraph.yml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ | grep -oP 'Qm[1-9A-HJ-NP-Za-km-z]{44}'`
+        run: export deploymentId=`graph deploy --access-token ${{secrets.GRAPH_ACCESS_TOKEN}} aavegotchi/aavegotchi-svg subgraph.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ | grep -oP 'Qm[1-9A-HJ-NP-Za-km-z]{44}'`
         shell: bash
       - name: Sync with Stakesquid
         run: |
