--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -8,9 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
+      - uses: composite
       - name: Install node
         uses: actions/setup-node@v1
         with:
@@ -28,14 +26,19 @@ jobs:
           yarn global add @graphprotocol/graph-cli
           echo "$(yarn global bin)" >> $GITHUB_PATH
         shell: bash
-      - name: Sync with Stakesquid
-        uses: actions/checkout@v1
-        with:
-          ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
+      - name: Deploy to TheGraph
         run: |
           export deploymentId=`graph deploy --access-token ${{secrets.GRAPH_ACCESS_TOKEN}} aavegotchi/aavegotchi-svg subgraph.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ | grep -oP 'Qm[1-9A-HJ-NP-Za-km-z]{44}'`
           echo $deploymentId
-          git clone git@github.com:StakeSquid/offchain-subgraph.git
+        shell: bash
+      - name: Checkout Stakesquid Offchain Subgraph Repo
+        uses: actions/checkout@v1
+        with:
+          repo: git@github.com:StakeSquid/offchain-subgraph.git
+          ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
+      - name: Sync with Stakesquid
+        run: |
+          echo $deploymentId
           cd offchain-subgraph
           if [[ `less ./offchain-subgraphs.txt` != *"$deploymentId"* ]]; then
             echo $deploymentId >> offchain-subgraphs.txt
