fix: checkout stakesquid repo

--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -32,10 +32,12 @@ jobs:
           echo $deploymentId
         shell: bash
       - name: Checkout Stakesquid Offchain Subgraph Repo
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
           repo: git@github.com:StakeSquid/offchain-subgraph.git
           ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
+          path: "./offchain-subgraph"
+          clean: false
       - name: Sync with Stakesquid
         run: |
           echo $deploymentId
