--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout Stakesquid Offchain Subgraph Repo
         uses: actions/checkout@master
         with:
-          repository: StakeSquid/offchain-subgraph.git
+          repository: StakeSquid/offchain-subgraph
           ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
           path: "./offchain-subgraph"
           clean: false
