fix: sync with stakesquid

--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -38,6 +38,8 @@ jobs:
           export deploymentId=`graph deploy --access-token ${{secrets.GRAPH_ACCESS_TOKEN}} aavegotchi/aavegotchi-svg subgraph.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ | grep -oP 'Qm[1-9A-HJ-NP-Za-km-z]{44}'`
           echo $deploymentId
           cd offchain-subgraph
+          git config --global user.email "mail@aavegotchi.com"
+          git config --global user.name "Aavegotchi"
           if [[ `less ./offchain-subgraphs.txt` != *"$deploymentId"* ]]; then
             echo $deploymentId >> offchain-subgraphs.txt
             git add offchain-subgraphs.txt
