--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -1,8 +1,9 @@
-name: Deploy Graph
+name: Deploy to Hosted Service
 
 on:
   push:
-    branches: master
+    branches:
+      - master
 
 jobs:
   deploy:
@@ -13,15 +14,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-      - name: Install Yarn
-        run: npm i -g yarn
-      - name: Install Libs
-        run: yarn --frozen-lockfile
-      - name: Codegen
-        run: yarn codegen
-      - name: Build
-        run: yarn build
-      - name: Deploy to TheGraph Hosted Service
+      - name: Deploy to Hosted Servce
         run: |
-          npx graph deploy --access-token ${{secrets.GRAPH_ACCESS_TOKEN}} aavegotchi/aavegotchi-svg subgraph.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/
+          npm i -g yarn
+          yarn --frozen-lockfile
+          yarn codegen
+          yarn build
+          npx graph deploy --product hosted-service --access-token ${{secrets.GRAPH_ACCESS_TOKEN}} aavegotchi/aavegotchi-svg
         shell: bash
