--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,29 +1,31 @@
 specVersion: 0.0.2
 schema:
-  file: ./schema.graphql
+    file: ./schema.graphql
 dataSources:
-  - kind: ethereum/contract
-    name: Contract
-    network: matic
-    source:
-      address: "0x86935F11C86623deC8a25696E1C19a8659CbF95d"
-      abi: Contract
-      startBlock: 21672000
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      entities:
-        - ClaimAavegotchi
-        - EquipWearables
-      abis:
-        - name: Contract
-          file: ./abis/Contract.json
-      eventHandlers:
-        - event: EquipWearables(indexed uint256,uint16[16],uint16[16])
-          handler: handleEquipWearables
-        - event: ClaimAavegotchi(indexed uint256)
-          handler: handleClaimAavegotchi
-      blockHandlers:
-        - handler: handleBlock
-      file: ./src/mapping.ts
+    - kind: ethereum/contract
+      name: Contract
+      network: matic
+      source:
+          address: "0x86935F11C86623deC8a25696E1C19a8659CbF95d"
+          abi: Contract
+          startBlock: 21672000
+      mapping:
+          kind: ethereum/events
+          apiVersion: 0.0.5
+          language: wasm/assemblyscript
+          entities:
+              - ClaimAavegotchi
+              - EquipWearables
+          abis:
+              - name: Contract
+                file: ./abis/Contract.json
+          eventHandlers:
+              - event: EquipWearables(indexed uint256,uint16[16],uint16[16])
+                handler: handleEquipWearables
+              - event: ClaimAavegotchi(indexed uint256)
+                handler: handleClaimAavegotchi
+              - event: UpdateSvg((bytes32,uint256[],uint256[])[])
+                handler: handleUpdateSvg
+          blockHandlers:
+              - handler: handleBlock
+          file: ./src/mapping.ts
