--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
+    "codegen:testnet": "graph codegen subgraph.testnet.yaml",
+    "build:testnet": "graph build subgraph.testnet.yaml",
     "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ aavegotchi-svgs-subgraph",
     "create-local": "graph create --node http://localhost:8020/ aavegotchi-svgs-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ aavegotchi-svgs-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 aavegotchi-svgs-subgraph"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.23.2",
-    "@graphprotocol/graph-ts": "0.23.1",
+    "@graphprotocol/graph-cli": "0.60.0",
+    "@graphprotocol/graph-ts": "0.31.0",
     "apollo-fetch": "^0.7.0"
   }
 }
