--- a/.github/workflows/deploy-alchemy.yml
+++ b/.github/workflows/deploy-alchemy.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Export Vars
+        run: |
+          NETWORK=${{ steps.extract-network.outputs.NETWORK }}
+          AAVEGOTCHI_DIAMOND=$(node -e "console.log(require('./config/$NETWORK.json').contracts.diamond)")
+          echo "AAVEGOTCHI_DIAMOND=$AAVEGOTCHI_DIAMOND" >> $GITHUB_OUTPUT
+
       - name: Deploy to Alchemy
         env:
           SUBGRAPH_NAME: aavegotchi-svg-${{ steps.extract-network.outputs.NETWORK }}
