chore: base sepolia

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "codegen:testnet": "graph codegen subgraph.testnet.yaml",
+    "codegen:baseSepolia": "graph codegen subgraph.baseSepolia.yaml",
     "build:testnet": "graph build subgraph.testnet.yaml",
+    "build:baseSepolia": "graph build subgraph.baseSepolia.yaml",
     "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ aavegotchi-svgs-subgraph",
     "create-local": "graph create --node http://localhost:8020/ aavegotchi-svgs-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ aavegotchi-svgs-subgraph",
