--- a/.github/workflows/deploy-tags-baseSepolia.yml
+++ b/.github/workflows/deploy-tags-baseSepolia.yml
@@ -24,10 +24,10 @@ jobs:
         run: yarn build:testnet
       - name: Deploy to Satsuma on test
         run: |
-          npx graph deploy aavegotchi-svg-amoy \
+          npx graph deploy aavegotchi-svg-baseSepolia \
             --deploy-key ${{secrets.SATSUMA_ACCESS_TOKEN}} \
             --node https://subgraphs.alchemy.com/api/subgraphs/deploy \
             --ipfs https://ipfs.satsuma.xyz \
             --version-label ${GITHUB_REF#refs/*/} \
-            subgraph.testnet.yaml
+            subgraph.baseSepolia.yaml
         shell: bash
