--- a/subgraph.geist.yaml
+++ b/subgraph.geist.yaml
@@ -8,7 +8,7 @@ dataSources:
     source:
       address: "0x6Acc828BbbC6874de40Ca20bfeA7Cd2a2DA8DA8c"
       abi: Contract
-      startBlock: 4273
+      startBlock: 1741966
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
