--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,29 +1,36 @@
+features:
+  - grafting
+graft:
+  base: QmeWcqPd2QvWiLsNWRZsiYxwqqBRszTHfsSTXusWf2Z8bA # Subgraph ID of base subgraph
+  block: 64874170 # Block number
 specVersion: 0.0.4
 schema:
-    file: ./schema.graphql
+  file: ./schema.graphql
 dataSources:
-    - kind: ethereum/contract
-      name: Contract
-      network: matic
-      source:
-          address: "0x86935F11C86623deC8a25696E1C19a8659CbF95d"
-          abi: Contract
-          startBlock: 39130899
-      mapping:
-          kind: ethereum/events
-          apiVersion: 0.0.6
-          language: wasm/assemblyscript
-          entities:
-              - ClaimAavegotchi
-              - EquipWearables
-          abis:
-              - name: Contract
-                file: ./abis/Contract.json
-          eventHandlers:
-              - event: EquipWearables(indexed uint256,uint16[16],uint16[16])
-                handler: handleEquipWearables
-              - event: ClaimAavegotchi(indexed uint256)
-                handler: handleClaimAavegotchi
-          blockHandlers:
-              - handler: handleBlock
-          file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: Contract
+    network: matic
+    source:
+      address: "0x86935F11C86623deC8a25696E1C19a8659CbF95d"
+      abi: Contract
+      startBlock: 39130899
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - ClaimAavegotchi
+        - EquipWearables
+      abis:
+        - name: Contract
+          file: ./abis/Contract.json
+      eventHandlers:
+        - event: EquipWearables(indexed uint256,uint16[16],uint16[16])
+          handler: handleEquipWearables
+        - event: ClaimAavegotchi(indexed uint256)
+          handler: handleClaimAavegotchi
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
+      blockHandlers:
+        - handler: handleBlock
+      file: ./src/mapping.ts
