--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "codegen:testnet": "graph codegen subgraph.testnet.yaml",
     "build:testnet": "graph build subgraph.testnet.yaml",
     "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ aavegotchi-svgs-subgraph",
-    "prepare:polygon": "mustache config/polygon.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:polygon": "mustache config/matic.json subgraph.template.yaml > subgraph.yaml",
     "prepare:baseSepolia": "mustache config/baseSepolia.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:prod": "mustache config/polygon.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:prod": "mustache config/matic.json subgraph.template.yaml > subgraph.yaml",
     "prepare:polter": "mustache config/polter.json subgraph.template.yaml > subgraph.yaml",
     "create-local": "graph create --node http://localhost:8020/ aavegotchi-svgs-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ aavegotchi-svgs-subgraph",
