chore: debug build

--- a/.github/workflows/deploy-alchemy.yml
+++ b/.github/workflows/deploy-alchemy.yml
@@ -39,6 +39,7 @@ jobs:
         run: yarn build
 
       - name: Export Vars
+        id: export-vars
         run: |
           NETWORK=${{ steps.extract-network.outputs.NETWORK }}
           AAVEGOTCHI_DIAMOND=$(node -e "console.log(require('./config/$NETWORK.json').contracts.diamond)")
